--- a/index.html
+++ b/index.html
@@ -28,34 +28,37 @@
         <div class="container">
             <img id="uppersection" src="images\bg-pattern-card.svg" alt="">
             <img id="profilepic" src="images\image-victor.jpg" alt="">
-            <h1>
-                Victor Crest
-                <span>
-          26
-        </span>
+            <h1>Victor Crest
+                <span>26</span>
             </h1>
-            <h2>
+            <p>
                 London
-            </h2>
+            </p>
             <div class="bottomsection">
-                <h1>
-                    80K
-                    <span>
-            Followers
-          </span>
-                </h1>
-                <h1>
-                    803K
-                    <span>
-            Likes
-          </span>
-                </h1>
-                <h1>
-                    1.4K
-                    <span>
-            Photos
-          </span>
-                </h1>
+                <div class="follower">
+                    <h1>
+                        80K
+                    </h1>
+                    <p>
+                        Followers
+                    </p>
+                </div>
+                <div class="likes">
+                    <h1>
+                        803K
+                    </h1>
+                    <p>
+                        Likes
+                    </p>
+                </div>
+                <div class="photos">
+                    <h1>
+                        1.4K
+                    </h1>
+                    <p>
+                        Photos
+                    </p>
+                </div>
             </div>
         </div>
     </main>
